--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clone-js",
+  "name": "@tropicalbastos/clone-js",
   "version": "1.0.0",
   "description": "JavaScript object deep cloning and object deep comparing library",
   "main": "./lib/deep-clone-util.js",
